conf page top fix

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -9,9 +9,9 @@ license: MIT
 author: bootply.com
 */
 
-body {
+/*body {
  padding-top:50px;
-}
+}*/
 
 body {
     background-image: url("img/back.jpg");
