--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -9,7 +9,6 @@
   <div id="masthead" style="background-image:url(img/ghee.jpg); background-position:center; background-size:cover; height:300px" >
     <div class="container"  align="center">
       <div class="row">
-
         <div class="col-md-12" style="padding-top:70px">
           <h1 id="page0" style="font-family: 'Rock Salt', sans-serif;text-shadow: 3px 2px 4px black;">Dosa House</h1>
           <p class="lead"  style="font-family: 'Montserrat', sans-serif;text-shadow: 1px 2px 2px black;">Quick. Fast. Food</p>
@@ -90,7 +89,7 @@
  
                                        
                                       {{else}}
-                                          <button type="button" class="fa fa-check btn btn-inverse" data-toggle="tooltip" data-placement="bottom" title='Not accepting online Orders'>
+                                          <button type="button" class="fa fa-check btn btn-inverse" data-toggle="tooltip" data-placement="bottom" title="Store Closed">
                                           <span class="price xsm"> {{currency Charge}} </span> 
                                            </button>
 
@@ -108,7 +107,7 @@
 
                                       {{else}}
 
-                                      <button type="button" class="fa fa-shopping-cart  btn btn-btn-inverse" data-toggle="tooltip" data-placement="bottom" title="Not accepting online Orders">
+                                      <button type="button" class="fa fa-shopping-cart  btn btn-btn-inverse" data-toggle="tooltip" data-placement="bottom" title="Store closed">
 
                                         <span class="price xsm"> {{currency Charge}} </span>  
                                       </button>
