Conf back ground color

--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -45,7 +45,7 @@
 
 
   <tr>
-    <td align="center" valign="top" width="100%" style="background-color: #f7f7f7;" class="content-padding">
+    <td align="center" valign="top" width="100%"  class="content-padding">
       <center>
         <table cellspacing="0" cellpadding="0" width="100%" class="w320">
           <tr>
