--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -5,7 +5,7 @@
   <tr>
     <td align="left" valign="top" width="100%" >
       <center>
-        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#000" >
+        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#31353D" >
           <tr>
             <td width="100%" height="80" valign="top" style="text-align: center; vertical-align:middle;">
             <!--[if gte mso 9]>
@@ -16,11 +16,11 @@
               <center>
                 <table cellpadding="0" cellspacing="0" width="100%" class="w320">
                   <tr>
-                    <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;">
+                    <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;   padding: 25px;">
                      <a href="/"> <img height="30" src="https://dosahouseau.herokuapp.com/img/dosa-logo2.png" alt="Dosa Express Logo" /></a>
                       
                     </td>
-                    <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d;">
+                    <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d; padding: 25px;">
 
                    <a href="http://twitter.com/dosaexpress"><img height="25" src="https://g.twimg.com/Twitter_logo_blue.png" alt="twitter" /></a>
 <!-- Social Buttons             
