--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -16,7 +16,7 @@
 
           <div class="col-xs-12">
 
-            <input type="number" maxlength="2" class="text-warning cartProduct" size="2" min="0"  id="product_in_cart" name="product_{{product}}" value="{{qty}}">
+            <input type="number" maxlength="2" class="text-warning cartProduct" size="2" min="0"  step="1" id="product_in_cart" name="product_{{product}}" value="{{qty}}">
 
            <span class="amount pull-right" >{{currency price}} </span>
         </div>
