Twitter URL corrected

--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -22,7 +22,7 @@
                     </td>
                     <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d; padding: 25px;">
 
-                   <a href="http://twitter.com/dosaexpress"><img height="25" src="https://g.twimg.com/Twitter_logo_blue.png" alt="twitter" /></a>
+                   <a id="conf-header-twitter" target="_blank" href="https://twitter.com/dosahouse"><img height="25" src="https://g.twimg.com/Twitter_logo_blue.png" alt="twitter" /></a>
 <!-- Social Buttons             
 <a href=""><img width="45" height="45" src="http://placehold.it/45x45" alt="facebook" /></a>
                       <a href=""><img width="45" height="45" src="http://placehold.it/45x45" alt="rss" /></a>
