Twitter URL corrected

--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -17,7 +17,7 @@
                 <table cellpadding="0" cellspacing="0" width="100%" class="w320">
                   <tr>
                     <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;   padding: 25px;">
-                     <a href="/"> <img height="30" src="https://dosahouseau.herokuapp.com/img/dosa-logo2.png" alt="Dosa Express Logo" /></a>
+                     <a href="/"> <img height="30" src="/img/dosa-logo2.png" alt="Dosa Express Logo" /></a>
                       
                     </td>
                     <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d; padding: 25px;">
