--- a/client/views/template/footerConfirmation.html
+++ b/client/views/template/footerConfirmation.html
@@ -1,13 +1,9 @@
  <template name="footerConfirmation">
 
-  <footer id="footer" class="footer">
-      <div class="row"   id="address" style="padding:50px;"> 
-
-        <div class="col-xs-12" align="center">
-            <div class="copyright col-xs-6 text-center">Powered by Websheets&#8482; </div>
-        </div>
+  <footer id="footer" >
+      <div class="col-xs-12" align="center"  id="trademark" style="padding:25px;"> 
+            <span class="copyright  text-center">Powered by Websheets&#8482; </span>
       </div>
-
   </footer>
 
 </template>
