--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -1,35 +1,27 @@
-<head>
-<meta name="keywords" content="Indian, Eggless Pastries, Vegetarian, Restaurant, Gluten Free, Chaat in Bothell, Indian Restaurant in Bothell, Online Ordering, Snack, Indian snack, Fast Food, catering">
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="cache-control" content="no-cache" />
-<meta content="width=device-width, maximum-scale=1, user-scalable=no" name="viewport" />
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="apple-touch-startup-image" href="/img/turbo_chilli_flat_logo_700X700.png">
-<title>ChowpaatyChaat</title>
-
-<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed' rel='stylesheet' type='text/css'>
-
-
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-<!-- Plugin JavaScript -->         
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-
-</head>
-
 <template name="layout">
+	
+<head>
+<meta charset="UTF-8">
+
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" href="img/dosa-hero2.jpg">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="mobile-web-app-capable" content="yes">
+
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Gem style -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<!-- Modernizr -->
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+<title>DosaHouse</title>
+</head>
 
 {{>header}}
 
@@ -44,18 +36,13 @@
 {{>catering}}
 <!---End Catering-->
 
-        
+				
   <!-- FOOTER -->
 
   {{>footer}}
 
   <!-- END / FOOTER --> 
 
-{{#if showCart}}
-
-    {{>cart}}
-
-  {{/if}}
-
+  {{>cart}}
   
   </template>
