--- a/client/views/template/aboutUs.html
+++ b/client/views/template/aboutUs.html
@@ -1,22 +1,14 @@
 <template name="aboutUs">
 
-<!-- About Section -->
-<section id="about" >
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>ABOUT US</h2>
-        <hr class="star-primary">
-      </div>
-    </div>
-    <div class="row">
+<div class="col-xs-12 col-lg-6 " style="padding:30px;">
+<div class="row" id="aboutUs">
+<h1  align="center" > About Us </h1>
 {{# each getContentArray 'AboutUs'}}
 
-	<p class="lead">{{this}}</p>
+  <p class="lead">{{this}}</p>
 
 {{/each}}
-    </div>
-  </div>
-</section>
 
+</div>
+</div>
 </template>
