--- a/client/views/template/catering.html
+++ b/client/views/template/catering.html
@@ -1,23 +1,15 @@
 
 <template name="catering">
-<!-- Catering Section -->
-<section id="catering">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>Catering</h2>
-        <hr class="star-primary">
-      </div>
-    </div>
-    <div class="row">
+<div class="col-xs-12 col-lg-6 " style="padding:30px;">
+<div class="row">
+<h1  align="center" id="catering"> Catering </h1>
 
-    	{{# each getContentArray 'Catering'}}
+{{# each getContentArray 'Catering'}}
 
-	<p class="lead">{{this}}</p>
+  <p class="lead">{{this}}</p>
 
 {{/each}}
 
-    </div>
-  </div>
-</section>
+</div>
+</div>
 </template>
