--- a/client/views/template/header.html
+++ b/client/views/template/header.html
@@ -1,42 +1,31 @@
 <template name="header">
 
-<!-- Navigation -->
-<nav  class="navbar navbar-default" style="background-color: white ;border-top:solid 5px red; z-index: 0; min-height:70px;margin-bottom: 0px;" >
-  <div class="container"> 
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="{{pathFor 'homePage'}}"><span class=""><img src="/img/headerlogo.png" style=" position:absolute; top:4px; left:0px;" /></span></a></div>
-    
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="hidden">      <a href="{{pathFor 'home'}}"></a> </li>
-        <li class="page-scroll"> <a href="{{pathFor 'homePage' hash='menucard'}}">MENU</a></li>
-        <li class="page-scroll"> <a href="{{pathFor 'homePage' hash='about'}}">ABOUT US</a></li>
-        <li class="page-scroll"> <a href="{{pathFor 'homePage' hash='catering'}}">CATERING</a></li>
-        <li class="page-scroll"> <a href="{{pathFor 'homePage' hash='callus'}}">CALL US</a></li>
-        <li class="page-scroll"> <a href="{{pathFor 'homePage' hash='callus'}}">LOCATION</a></li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse --> 
-  </div>
-  <!-- /.container-fluid --> 
-</nav>
+<header class="shadow" >
+  <div id="logo"><a href="#"><img  src="img/headerlogo.png" width="100" alt="Homepage" ></a></div>
+  <div id="cd-hamburger-menu"><a class="cd-img-replace hamburgerMenu" href="#0">Menu</a></div>
 
-<!-- Header -->
-<header>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12"> 
-        <!--<img class="img-responsive" width="150" src="/img/profile2.png"  alt="">--> 
-        <!--<i style="color: red; text-shadow: 2px 2px 8px rgba(0,0,0,.20)" class="glyphicon-fire glyphicon fa-5x"></i> -->
-        <div class="intro-text" > <span class="name" style="font-size:3em; text-shadow: 0 0 5px #E57B00, 0 0 2px gold, 0 0 3px #fff, 0 0 10px red, 0 0 20px orange, 0 0 80px orange, 0 0 30px orange, 0 0 150px red;">{{getSettings 'store_name'}}</span>
-          <hr class="star-light">
-          <span class="skills">{{getSettings 'tag_line'}}</span></div>
-      </div>
-    </div>
-  </div>
+  {{# if isItemInCart}}
+
+  <div id="cd-cart-trigger"><a id ="dosahousecart" class="cd-img-replace openCart" style="background-color:green;" href="#0">Cart</a></div>
+
+
+  {{else}}
+
+  <div id="cd-cart-trigger"><a id ="dosahousecart" class="cd-img-replace openCart" style="background-color:#26292f;" href="#0">Cart</a></div>
+
+  {{/if}}
+
+
 </header>
+<!-- NAVIGATIONS -->
+<nav id="main-nav">
+  <ul id="main-nav-header" style="font-family: 'Montserrat';">
+    <li> <a id="main-menutoggle"    href="#menu"    class="mainmenutoggle">Our Menu</a> </li>
+    <li> <a id="aboutus-menutoggle" href="#aboutUs" class="mainmenutoggle">About Us</a></li>
+    <li > <a id="catering-menutoggle"   href="#catering"  class="mainmenutoggle">Catering</a> </li>
+    <li> <a id="findus-menutoggle" href="https://www.google.com/maps/place/4%2F100-102+Pacific+Hwy,+Waitara+NSW+2077,+Australia"  target="_blank" class="mainmenutoggle">Find Us</a></li>
+
+  </ul>
+</nav>
 
 </template>
