--- a/client/views/template/footer.html
+++ b/client/views/template/footer.html
@@ -2,8 +2,7 @@
 
   <footer id="footer" class="footer">
       <div class="row"   id="address" style="padding:30px;"> 
-        <div class="copyright col-xs-12 text-center">Powered by <a href='http://websheets.io'>Websheets&#8482;</a> </div>
-        
+        <div class="copyright col-xs-12 text-center">&nbsp;</div>
         <div class="pull-left col-xs-6" align="left"> {{getSettings 'address'}}
           <br>
           Phone: <a href="tel:{{phoneNumber.Value}}" class="phone">{{getSettings 'phone_number'}}</a> 
@@ -17,6 +16,8 @@
             <a id="footer-twitter" target="_blank" href="https://twitter.com/dosahouse" >@dosaexpress</a> </div>
         </div>
       </div>
+        <div class="copyright col-xs-12 text-center">Powered by <a href='http://websheets.io'>Websheets&#8482;</a> </div>
+        <div class="copyright col-xs-12 text-center">&nbsp;</div>
 
   </footer>
 
