--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -1,15 +1,13 @@
 <template name="confirmation">
-<nav class="navbar navbar-default" style="background-color: white ;border-top:solid 5px red; z-index: 0; min-height:70px;margin-bottom: 0px;" >
-  <div class="container"> 
+<nav class="navbar navbar-default" style="background-color: white ;border-top:solid 5px #26292f; z-index: 0; min-height:70px;margin-bottom: 0px;" >
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll">
 
-      <a class="navbar-brand" href="{{pathFor 'home'}}"><span class=""><img src="/img/headerlogo.png" style=" position:absolute; top:4px; left:0px;" /></span></a></div>
-    
+      <div id="logo"><a href="{{pathFor 'home'}}"><img  src="/img/headerlogo.png" width="100" alt="Homepage" ></a></div>
+
     <!-- Collect the nav links, forms, and other content for toggling -->
 
     <!-- /.navbar-collapse --> 
-  </div>
+  
   <!-- /.container-fluid --> 
 </nav>
 <table align="center" cellpadding="0" cellspacing="0" class="container-for-gmail-android" width="100%">
