--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -112,18 +112,12 @@
       </table>
     </div>
   </div>
-  <div>
-    <table>
-      <tr>
-        <td>
-        <span id='contactInfoError' style="color:red;" align='right'></span>
-      </td>
-    </tr>
-    </table>
-  </div>
+
+        <p id='contactInfoError' style="color:red;" align='center'></p>
+
 <br>
     <div align="center" >
-    <button class="bttn-modal" id="placeOrder">Place Order</button>
+    <button type="submit" class="bttn-modal" id="placeOrder">Place Order</button>
     <button class="bttn-modal" id="checkout-modal-close-trigger">Close</button><br/>
   </div>
 
