logic to skip state

--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -73,70 +73,78 @@
                                 <img src="/img/confirmation/1-on.png"  width='100' alt="Order Placed" /><br />
                                 <b>✓</b><br />Order Placed</td>
 
-                                {{#if isInKitchen Order }}
+                                {{#if isStateEnabled '2'}}
 
-                                       <!-- STEP TWO -->
-                                      <td class="step active">
-                                        <img src="/img/confirmation/2-on.png" alt="In Kitchen" /><br />
-                                <b>✓</b><br />In Kitchen</td>
-                                {{else}}
+                                    {{#if isInKitchen Order }}
 
-                               <!-- STEP TWO -->
-                                      <td class="step ">
-                                        {{#if omEnabled}}
-                                            <a href="#" id='moveOrderStatus'>
-                                              <img src="/img/confirmation/2-off.png" alt="In Kitchen" />
-                                            </a>
-                                        {{else}}
-                                             <img src="/img/confirmation/2-off.png" alt="In Kitchen" />
-                                        {{/if}}
+                                           <!-- STEP TWO -->
+                                          <td class="step active">
+                                            <img src="/img/confirmation/2-on.png" alt="In Kitchen" /><br />
+                                    <b>✓</b><br />In Kitchen</td>
+                                    {{else}}
 
-                                        <br />
-                                <b>&nbsp;</b><br />In Kitchen</td>
-                                {{/if}}
+                                   <!-- STEP TWO -->
+                                          <td class="step ">
+                                            {{#if isOSMEnabled}}
+                                                <a href="#" id='moveOrderStatus'>
+                                                  <img src="/img/confirmation/2-off.png" alt="In Kitchen" />
+                                                </a>
+                                            {{else}}
+                                                 <img src="/img/confirmation/2-off.png" alt="In Kitchen" />
+                                            {{/if}}
 
+                                            <br />
+                                    <b>&nbsp;</b><br />In Kitchen</td>
+                                    {{/if}}
+                                {{/if}} 
 
-                                {{#if isSaleComplete Order}}
+                                {{#if isStateEnabled '3'}}
 
-                                      <td class="step active">
-                                      <img src="/img/confirmation/3-on.png" alt="Ready for Pickup" /><br />
-                                <b>✓</b><br />Ready for Pickup</td>
+                                    {{#if isSaleComplete Order}}
 
-                                {{else}}
-                                     <!-- STEP THREE -->
-                                    <td class="step">
-                                      {{#if enableReadyButton Order omEnabled}}
-                                          <a href="#" id='moveOrderStatus'>
-                                            <img src="/img/confirmation/3-off.png" alt="Not Ready" /><br />
-                                          </a>  
-                                       {{else}}  
-                                          <img src="/img/confirmation/3-off.png" alt="Not Ready" /><br />
-                                      {{/if}}
- 
-                                <b>&nbsp;</b><br />Ready for Pickup</td>
+                                          <td class="step active">
+                                          <img src="/img/confirmation/3-on.png" alt="Ready for Pickup" /><br />
+                                    <b>✓</b><br />Ready for Pickup</td>
 
-                                {{/if}}
+                                    {{else}}
+                                         <!-- STEP THREE -->
+                                        <td class="step">
+                                          {{#if enableReadyButton Order isOSMEnabled}}
+                                              <a href="#" id='moveOrderStatus'>
+                                                <img src="/img/confirmation/3-off.png" alt="Not Ready" /><br />
+                                              </a>  
+                                           {{else}}  
+                                              <img src="/img/confirmation/3-off.png" alt="Not Ready" /><br />
+                                          {{/if}}
+     
+                                    <b>&nbsp;</b><br />Ready for Pickup</td>
 
-                                {{#if isDelivered Order}}
+                                    {{/if}}
+                                {{/if}} 
+   
+                                {{#if isStateEnabled '4'}}
 
-                                      <td class="step active">
-                                      <img src="/img/confirmation/4-on.png" alt="Order Delivered" /><br />
-                                <b>✓</b><br />Order Delivered</td>
+                                    {{#if isDelivered Order}}
 
-                                {{else}}
-                                     <!-- STEP THREE -->
-                                    <td class="step">
-                                      {{#if enableDeliveredButton Order omEnabled}}
-                                          <a href="#" id='moveOrderStatus'>
-                                            <img src="/img/confirmation/4-off.png" alt="Not Delivered" /><br />
-                                          </a>  
-                                       {{else}}  
-                                          <img src="/img/confirmation/4-off.png" alt="Not Delivered" /><br />
-                                      {{/if}}
- 
-                                <b>&nbsp;</b><br />Order Delivered</td>
+                                          <td class="step active">
+                                          <img src="/img/confirmation/4-on.png" alt="Order Delivered" /><br />
+                                    <b>✓</b><br />Order Delivered</td>
 
-                                {{/if}}                                
+                                    {{else}}
+                                         <!-- STEP THREE -->
+                                        <td class="step">
+                                          {{#if enableDeliveredButton Order isOSMEnabled}}
+                                              <a href="#" id='moveOrderStatus'>
+                                                <img src="/img/confirmation/4-off.png" alt="Not Delivered" /><br />
+                                              </a>  
+                                           {{else}}  
+                                              <img src="/img/confirmation/4-off.png" alt="Not Delivered" /><br />
+                                          {{/if}}
+     
+                                    <b>&nbsp;</b><br />Order Delivered</td>
+
+                                    {{/if}}   
+                              {{/if}} 
 
                             </tr>
                           </table>
