--- a/client/views/template/footer.html
+++ b/client/views/template/footer.html
@@ -12,8 +12,8 @@
           {{/if}}
         </div>
         <div class="pull-right col-xs-6" align="right">
-          <div class="head-social"> <a href="#"><i class="fa fa-twitter fa-2x"></i></a> <br>
-            <a id="footer-twitter" target="_blank" href="https://twitter.com/dosahouse" >@dosaexpress</a> </div>
+          <div class="head-social"> <a target="_blank" href="{{getSettings 'twitter_url'}}"><i class="fa fa-twitter fa-2x"></i></a> <br>
+            <a id="footer-twitter" target="_blank" href="{{getSettings 'twitter_url'}}" >@dosaexpress</a> </div>
         </div>
       </div>
         <div class="copyright col-xs-12 text-center">Powered by <a href='http://websheets.io'>Websheets&#8482;</a> </div>
