--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -47,10 +47,18 @@
         {{#if isMenuAvailable Value}}
 
                     <div align="left" style="padding-left:15px;">
-                      <p>&nbsp;</p><p>&nbsp;</p>
-                      <p>
+                        <div class="col-xs-12">
+                            <p>&nbsp;</p>
+                        </div>
+                        <div class="col-xs-12">
+                          
                           <h1 align='center'> ♨ {{ Value }} ♨ </h1>
-                      </p> <p>&nbsp;</p>
+
+                        </div>
+                        <div class="col-xs-12">
+                            <p>&nbsp;</p>
+                        </div>
+
 
             {{ #each menu Value }}
 
@@ -117,23 +125,7 @@
             {{/each}} 
                       
 
-                      {{#if idOddNumberItems Value}}
-                          <div class="col-lg-6" id="dummy">
-                            <div class="the-menu-item ">
-                                <div>  </div>
-                                  <a  href="#">
-                                      <div class="the-menu-body">
-                                        <h4 class="xsm"></h4>
-                                        <p class="small"></p>
-                                      </div>
-                                  </a>
-                                  <div class="prices"> 
-                                
 
-                                  </div>
-                             </div>     
-                      </div>
-                      {{/if}}
 
 
           </div>
