--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -15,6 +15,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 <title>DosaHouse</title>
+<link rel="icon" sizes="16x16 32x32" href="/img/favicon.ico?v=2">
 </head>
 <template name="layout">
 	
