--- a/client/views/template/footer.html
+++ b/client/views/template/footer.html
@@ -1,15 +1,11 @@
  <template name="footer">
-
+<div class="col-xs-12" id="footerCol">
   <footer id="footer" class="footer">
       <div class="row"   id="address" style="padding:30px;"> 
         <div class="copyright col-xs-12 text-center">&nbsp;</div>
         <div class="pull-left col-xs-6" align="left"> {{getSettings 'address'}}
           <br>
           Phone: <a href="tel:{{phoneNumber.Value}}" class="phone">{{getSettings 'phone_number'}}</a> 
-          {{#if hasFaxNumber faxNumber.Value}}
-              <br>
-            Fax: <a href="tel:{{faxNumber.Value}}" class="phone">{{faxNumber.Value}}</a> 
-          {{/if}}
         </div>
         <div class="pull-right col-xs-6" align="right">
           <div class="head-social"> <a target="_blank" href="{{getSettings 'twitter_url'}}"><i class="fa fa-twitter fa-2x"></i></a> <br>
@@ -20,5 +16,5 @@
         <div class="copyright col-xs-12 text-center">&nbsp;</div>
 
   </footer>
-
+</div>
 </template>
