--- a/client/stylesheets/websheets/styles.css
+++ b/client/stylesheets/websheets/styles.css
@@ -87,7 +87,7 @@ sup {
       font-size:14px;
       color: #eee;
    
-      padding: 20px;
+      padding: 20px 20px 40px 20px;
 
 
 
@@ -96,6 +96,7 @@ sup {
    .col-xs-12#footerCol{
       padding-right: 0;
       padding-left: 0;
+      margin-top: 60px;
 
    }
 
