--- a/client/views/template/header.html
+++ b/client/views/template/header.html
@@ -20,10 +20,10 @@
 <!-- NAVIGATIONS -->
 <nav id="main-nav">
   <ul id="main-nav-header" style="font-family: 'Montserrat';">
-    <li> <a id="main-menutoggle"    href="#menu"    class="mainmenutoggle">Our Menu</a> </li>
-    <li> <a id="aboutus-menutoggle" href="#aboutUs" class="mainmenutoggle">About Us</a></li>
-    <li > <a id="catering-menutoggle"   href="#catering"  class="mainmenutoggle">Catering</a> </li>
-    <li> <a id="findus-menutoggle" href={{getSettings 'google_location_url'}}  target="_blank" class="mainmenutoggle">Find Us</a></li>
+    <li> <a id="main-menutoggle"      href="#menu"      class="mainmenutoggle">Our Menu</a> </li>
+    <li> <a id="aboutus-menutoggle"   href="#aboutUs"   class="mainmenutoggle">About Us</a></li>
+    <li> <a id="catering-menutoggle"  href="#catering"  class="mainmenutoggle">Catering</a> </li>
+    <li> <a id="findus-menutoggle"    href="{{getSettings 'google_location_url'}}"  target="_blank" class="mainmenutoggle">Find Us</a></li>
 
   </ul>
 </nav>
