--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -39,6 +39,7 @@
 {{/if}}
 <!-- Main Content --> 
 <!-- Main > Start Menus-->
+<section id="menucard">
 <div class="col-xs-12" id="menu">
   <div class="row"  >
 
@@ -136,7 +137,7 @@
 
   </div>
 </div>
-
+</section>
 
 
 <!-- Main > End Menus --> 
