store name and tag line dynamic

--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -8,8 +8,8 @@
     <div class="container"  align="center">
       <div class="row">
         <div class="col-md-12" style="color:white;padding-top:70px">
-          <h1 id="page0" style="font-family: 'Rock Salt', sans-serif;text-shadow: 3px 2px 4px black;">Dosa House</h1>
-          <p class="lead"  style="font-family: 'Montserrat', sans-serif;text-shadow: 1px 2px 2px black;">Quick. Fast. Food Order Online</p>
+          <h1 id="page0" style="font-family: 'Rock Salt', sans-serif;text-shadow: 3px 2px 4px black;">{{getSettings 'store_name'}}</h1>
+          <p class="lead"  style="font-family: 'Montserrat', sans-serif;text-shadow: 1px 2px 2px black;">{{getSettings 'tag_line'}}</p>
         </div>
       </div>
     </div>
